--- a/lunch.html
+++ b/lunch.html
@@ -44,18 +44,32 @@
                 entreeList.innerHTML = ''; // Clear existing items
 
                 if (data && data.menu && data.menu.length > 0) {
+                    let foundEntrees = false;
+
                     data.menu.forEach(menuItem => {
                         if (menuItem.Entrees && menuItem.Entrees.length > 0) {
                             menuItem.Entrees.forEach(entree => {
-                                const li = document.createElement('li');
-                                li.textContent = `${entree.Name} - ${menuItem.Date}`;
-                                entreeList.appendChild(li);
+                                if (
+                                    entree.MenuPlanName.includes('Lunch') &&
+                                    entree.CategoryName === 'MainEntree'
+                                ) {
+                                    const li = document.createElement('li');
+                                    li.textContent = `${entree.Name} (${menuItem.Date})`;
+                                    entreeList.appendChild(li);
+                                    foundEntrees = true;
+                                }
                             });
                         }
                     });
+
+                    if (!foundEntrees) {
+                        const li = document.createElement('li');
+                        li.textContent = 'No lunch entrees found matching the criteria.';
+                        entreeList.appendChild(li);
+                    }
                 } else {
                     const li = document.createElement('li');
-                    li.textContent = 'No entrees found for the selected date range.';
+                    li.textContent = 'No data found for the selected date range.';
                     entreeList.appendChild(li);
                 }
             } catch (error) {
@@ -68,3 +82,4 @@
     </script>
 </body>
 </html>
+
