--- a/lunch.html
+++ b/lunch.html
@@ -22,7 +22,7 @@
     </style>
 </head>
 <body>
-    <h1>Lunch Main Entrees</h1>
+    <h1>Lunch Main Entrees1</h1>
     <ul class="entrees" id="entreeList">
         <!-- Recipe names will be dynamically populated here -->
     </ul>
