--- a/lunch.html
+++ b/lunch.html
@@ -34,7 +34,7 @@
       var mm = String(today.getMonth() + 1).padStart(2, "0") //January is 0!
       var yyyy = today.getFullYear()
 
-      today = mm + "-" + "06" + "-" + yyyy
+      today = mm + "-" + "dd" + "-" + yyyy
       console.log(today)
 
       const API_URL =
