--- a/lunch.html
+++ b/lunch.html
@@ -10,13 +10,18 @@
         margin: 20px;
         background: rgba(65, 154, 186, 0.21);
       }
+      h2 {
+        font-size: 25px;
+      }
 
       td {
         padding-right: 40px;
         vertical-align: top;
+        font-size: 15px;
       }
       th {
         text-align: left;
+        font-size: 20px;
       }
     </style>
   </head>
