--- a/lunch.html
+++ b/lunch.html
@@ -11,7 +11,7 @@
         background: rgba(65, 154, 186, 0.21);
       }
       h2 {
-        font-size: 25px;
+        font-size: 5em;
       }
 
       td {
