--- a/lunch.html
+++ b/lunch.html
@@ -12,6 +12,7 @@
       }
       h2 {
         font-size: 45px;
+        margin: 5px;
       }
 
       td {
@@ -32,8 +33,7 @@
       <tr>
         <td id="todayList" style="list-style-type: none"></td>
       </tr>
-      <tr><td></td></tr>
-      <tr><td></td></tr>
+      <tr style="height:20px"><td></td></tr>
       <tr>
         <th id="tmrwDate"></th>
       </tr>
